# Cairn

./: .env.example  .gitattributes  .gitignore  .mcp.json  16  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  commit-msg-adrs.txt  deny.toml  docker-compose.override.yml.bak  docker-compose.yml  start-server.ps1
.cargo/: audit.toml
.claude/: settings.json
.config/: nextest.toml
.cursor/: mcp.json
.cursor/rules/: cairn.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  rust-security.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: feature-001-finalize.yml  git-feature-preflight.yml  workflow-registry.json
apps/cli/: Cargo.toml
apps/cli/src/: ipc.rs  main.rs  output.rs  token.rs
apps/cli/src/commands/: daemon.rs  init.rs  mod.rs  session.rs  status.rs
apps/cli/tests/: json_stability.rs  us1_cli_contract.rs  us2_cli_contract.rs  us4_cli_contract.rs
apps/cli/tests/goldens/: watcher-start-failed-install.json  watcher-start-failed-reconcile.json
apps/cli/tests/support/: mod.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: config.rs  ipc.rs  lib.rs  logging.rs  main.rs  recovery.rs  router.rs  state.rs
apps/daemon/src/handlers/: convert.rs  daemon.rs  events.rs  mod.rs  repository.rs  session.rs  snapshot.rs
apps/daemon/src/watch/: debounce.rs  filter.rs  mod.rs  reconcile.rs
apps/daemon/tests/: log_redaction.rs  perf.rs  privacy_audit.rs  us1_register_inspect.rs  us2_agent_sim.rs  us2_sessions.rs  us3_events.rs  us3_tracking.rs  us4_crash_restart.rs  us4_recovery.rs
apps/daemon/tests/support/: mod.rs
crates/cairn-api/: Cargo.toml  build.rs
crates/cairn-assemble/: Cargo.toml
crates/cairn-assemble/src/: lib.rs
crates/cairn-bench/: Cargo.toml
crates/cairn-cli/: Cargo.toml
crates/cairn-client/: Cargo.toml
crates/cairn-context/: Cargo.toml
crates/cairn-document/: Cargo.toml
crates/cairn-document/src/: lib.rs
crates/cairn-domain/: Cargo.toml
crates/cairn-domain/src/: ids.rs  lib.rs  session.rs  snapshot.rs  time.rs
crates/cairn-domain/tests/: fingerprint.rs  session_state.rs
crates/cairn-embed/: Cargo.toml
crates/cairn-events/: Cargo.toml
crates/cairn-events/src/: catalog.rs  lib.rs  replay.rs
crates/cairn-events/tests/: replay.rs
crates/cairn-git/: Cargo.toml
crates/cairn-git/src/: discover.rs  error.rs  fingerprint.rs  identity.rs  ignored.rs  lib.rs  runner.rs  status.rs
crates/cairn-git/tests/: fingerprint_determinism.rs  status_parse.rs
crates/cairn-guard/: Cargo.toml
crates/cairn-ingest/: Cargo.toml
crates/cairn-mcp/: Cargo.toml
crates/cairn-mcp/src/: guidance.rs  lib.rs  prompts.rs  resources.rs
crates/cairn-memory/: Cargo.toml
crates/cairn-memory/src/: lib.rs  llm_consolidator.rs  llm_intelligence.rs
crates/cairn-pack/: Cargo.toml
crates/cairn-proactive/: Cargo.toml
crates/cairn-profile/: Cargo.toml
crates/cairn-protocol/: Cargo.toml
crates/cairn-protocol/goldens/ipc/: session-start-request.json  watcher-start-failed-install.json  watcher-start-failed-reconcile.json
crates/cairn-protocol/schemas/: cli-envelope.json  daemon-status-result.json  error-body.json  events-list-params.json  events-list-result.json  ignored-files-params.json  ignored-files-result.json  inspect-params.json  inspection.json  register-params.json  register-result.json  request.json  response.json  session-get-params.json  session-get-result.json  session-heartbeat-params.json  session-heartbeat-result.json  session-list-params.json  session-list-result.json  session-reattach-params.json  session-reattach-result.json  session-start-params.json  session-start-result.json  session-stop-params.json  session-stop-result.json  snapshot-create-params.json  snapshot-create-result.json
crates/cairn-protocol/src/: dto.rs  errors.rs  lib.rs  methods.rs
crates/cairn-protocol/tests/: schemas.rs
crates/cairn-proxy/: Cargo.toml
crates/cairn-registry/: Cargo.toml
crates/cairn-server/: Cargo.toml
crates/cairn-session/: Cargo.toml
crates/cairn-session/src/: lib.rs  liveness.rs  service.rs  token.rs
crates/cairn-share/: Cargo.toml
crates/cairn-storage-local/: Cargo.toml
crates/cairn-storage-local/src/: db.rs  events.rs  lib.rs  records.rs  repos.rs  sessions.rs  snapshots.rs  worktrees.rs  writer.rs
crates/cairn-storage-local/tests/: storage.rs
crates/cairn-store/: Cargo.toml
crates/cairn-store/src/: blob.rs  db.rs  helix.rs  lib.rs  memory_backend.rs  schema.surql  surreal.rs
crates/cairn-sync/: Cargo.toml
crates/cairn-tests/: Cargo.toml
docs/: ADMIN.md  ARCHITECTURE.md  AUDIT_v6.1.0.md  BENCHMARKS.md  DECISIONS.md  E2E.md  PLAN.md  PLAN_v0.5.0.md  PLAN_v0.6.0.md  PLAN_v0.8.0.md  README.md  RECOMMENDATIONS.md  ROADMAP.md  TESTING.md  UPGRADING.md  WEB.md
docs/archive/: PLAN_v0.5.0.md
docs/audits/: REPORT.md  build-runtime.md  deps-ci.md  security-arch.md
docs/guides/: admin.md  ide-integration.md  upgrading.md  web-auth.md
docs/live-e2e/: 01-auth.md  02-memory-crud.md  03-recall-search.md  04-memory-graph-heatmap-arch.md  05-context-engine.md  06-compression-savings.md  07-tier-promotion.md  08-guard-drift.md  09-guard-checkpoint.md  10-guard-anchor.md  11-profile-preferences.md  12-share-pool.md  13-registry-packs.md  14-registry-trust.md  15-devices-tokens.md  16-pair-mobile.md  17-push.md  18-ingest.md  19-audit.md  20-sessions-ccp.md  21-sync.md  22-health-discovery.md  23-cli.md  24-hooks.md  25-agent-wiring.md  26-dashboard-palette.md  27-settings.md  28-edge-cases.md  29-stubs-and-gaps.md  30-mcp-transport.md  README.md
docs/planning/: roadmap.md
docs/reference/: architecture.md  decisions.md
docs/testing/: overview.md
extensions/chrome/: background.js  content.js  manifest.json  popup.html  (+1 more)
scripts/: e2e.ps1  install.ps1  install.sh
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+340 files in other folders)
