[workspace]
resolver = "2"
members = [
    "crates/cairn-core",
    "crates/cairn-store",
    "crates/cairn-context",
    "crates/cairn-memory",
    "crates/cairn-guard",
    "crates/cairn-assemble",
    "crates/cairn-shell",
    "crates/cairn-profile",
    "crates/cairn-share",
    "crates/cairn-session",
    "crates/cairn-pack",
    "crates/cairn-registry",
    "crates/cairn-sync",
    "crates/cairn-bench",
    "crates/cairn-proxy",
    "crates/cairn-proactive",
    "crates/cairn-ingest",
    "crates/cairn-embed",
    "crates/cairn-api",
    "crates/cairn-mcp",
    "crates/cairn-client",
    "crates/cairn-rerank",
    "crates/cairn-tests",
]

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Cairn contributors"]
repository = "https://github.com/Vellixia/cairn"
# MSRV 1.89 - required by `surrealdb ~3.1` (v0.8.0 Sprint 1). Bumped from 1.85 on 2026-07-02.
rust-version = "1.89"

[workspace.dependencies]
# internal crates
cairn-core = { path = "crates/cairn-core" }
cairn-store = { path = "crates/cairn-store" }
cairn-context = { path = "crates/cairn-context" }
cairn-memory = { path = "crates/cairn-memory" }
cairn-guard = { path = "crates/cairn-guard" }
cairn-assemble = { path = "crates/cairn-assemble" }
cairn-shell = { path = "crates/cairn-shell" }
cairn-profile = { path = "crates/cairn-profile" }
cairn-share = { path = "crates/cairn-share" }
cairn-session = { path = "crates/cairn-session" }
cairn-pack = { path = "crates/cairn-pack" }
cairn-registry = { path = "crates/cairn-registry" }
cairn-proactive = { path = "crates/cairn-proactive" }
cairn-ingest = { path = "crates/cairn-ingest" }
cairn-embed = { path = "crates/cairn-embed" }
cairn-mcp = { path = "crates/cairn-mcp" }
cairn-rerank = { path = "crates/cairn-rerank" }

# Pinned to specific minor versions via tilde (~major.minor) so CI can fail
# loudly via `cargo build --locked` if Cargo.lock drifts outside that minor.
# Tilde syntax constrains to >=MAJOR.MINOR.0, <MAJOR.(MINOR+1).0.
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
thiserror = "~2.0"
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
sha2 = "~0.10"
hex = "~0.4"
uuid = { version = "~1.23", features = ["v4", "serde"] }
directories = "~5.0"
similar = "~2.7"
tokio = { version = "~1.52", features = ["full"] }
# v0.8.0 Sprint 4 in-process cron scheduler. Real dependency footprint (verified via
# `cargo add --dry-run` + a probe build): chrono-tz + croner (the cron-expression parser) +
# uuid/tracing/strum/darling, all either already-present workspace deps or lightweight. The
# nats/postgres features exist for distributed-scheduler use cases we don't need - not enabled.
tokio-cron-scheduler = { version = "~0.15", default-features = false }
axum = "~0.7"
tower = "~0.5"
tower-http = { version = "~0.5", features = ["fs", "cors", "trace", "limit"] }
clap = { version = "~4.6", features = ["derive"] }
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }
tempfile = "~3.27"
rust-embed = "~8.11"
ureq = { version = "~2.12", features = ["json"] }
jsonwebtoken = "~9.3"
regex = "~1.12"
# Format- and comment-preserving TOML editor for Codex config.toml merges (already in the
# lockfile transitively at 0.22.x, so this adds no new version).
toml_edit = "~0.22"
surrealdb = { version = "~3.1", default-features = false, features = ["protocol-ws"] }
self_update = { version = "~0.44", default-features = false, features = ["ureq", "rustls", "archive-tar", "compression-flate2", "archive-zip", "compression-zip-deflate"] }
url = "~2.5"
argon2 = "~0.5"
rand = "~0.8"
base64 = "~0.22"
hmac = "~0.12"
ed25519-dalek = { version = "~2.1", features = ["rand_core"] }
rand_core = "~0.6"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
