[workspace]
resolver = "2"
members = [
    "apps/daemon",
    "apps/cli",
    "crates/cairn-domain",
    "crates/cairn-protocol",
    "crates/cairn-git",
    "crates/cairn-events",
    "crates/cairn-session",
    "crates/cairn-storage-local",
    "fixtures/repositories",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
blake3 = "1"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
notify = "8"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
rand = "0.8"
base64 = "0.22"
whoami = "1"
tempfile = "3"
walkdir = "2"

cairn-domain = { path = "crates/cairn-domain" }
cairn-protocol = { path = "crates/cairn-protocol" }
cairn-git = { path = "crates/cairn-git" }
cairn-events = { path = "crates/cairn-events" }
cairn-session = { path = "crates/cairn-session" }
cairn-storage-local = { path = "crates/cairn-storage-local" }
fixtures-repositories = { path = "fixtures/repositories" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "allow"

[workspace.lints.rust]
unused_must_use = "deny"

[profile.dev]
debug = 1
