[package]
name = "cairn-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cairnd"
path = "src/main.rs"

[lib]
name = "cairn_daemon"
path = "src/lib.rs"

[dependencies]
cairn-domain = { workspace = true }
cairn-protocol = { workspace = true }
cairn-git = { workspace = true }
cairn-events = { workspace = true }
cairn-session = { workspace = true }
cairn-storage-local = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[dev-dependencies]
fixtures-repositories = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
