[package]
name = "cairn-assemble"
description = "Cairn context assembler: a lean, edge-ordered working set under a token budget."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-memory.workspace = true
serde.workspace = true

[dev-dependencies]
cairn-store.workspace = true
tempfile.workspace = true
