[package]
name = "cairn-document"
description = "RAG document ingestion: fetch a file/URL, split it into chunks ready for storage."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
