[package]
name = "cairn-events"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-domain = { workspace = true }
cairn-storage-local = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
