[package]
name = "cairn-mcp"
description = "Cairn MCP server (stdio) - connect any MCP-capable agent."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
# Engine-backed local-mode deps (`McpServer`) - optional, gated behind the `engine` feature.
# `cairn-client` (the CLI) never reaches local mode (it always requires a remote server before
# calling into this crate - see `require_server()`), so it depends on this crate with
# `default-features = false` to avoid compiling in SurrealDB and friends just to support a
# code path it can't reach. `cairn-api` (which genuinely runs `McpServer` per `/api/tools/call`
# request) and `cairn-tests` (whose dispatch test exercises it directly) both opt back in with
# `features = ["engine"]`.
cairn-store = { workspace = true, optional = true }
cairn-context = { workspace = true, optional = true }
cairn-memory = { workspace = true, optional = true }
cairn-guard = { workspace = true, optional = true }
cairn-assemble = { workspace = true, optional = true }
cairn-shell = { workspace = true, optional = true }
cairn-profile = { workspace = true, optional = true }
cairn-share = { workspace = true, optional = true }
cairn-proactive = { workspace = true, optional = true }
cairn-registry = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
tracing.workspace = true

chrono.workspace = true

[features]
default = []
engine = [
    "dep:cairn-store",
    "dep:cairn-context",
    "dep:cairn-memory",
    "dep:cairn-guard",
    "dep:cairn-assemble",
    "dep:cairn-shell",
    "dep:cairn-profile",
    "dep:cairn-share",
    "dep:cairn-proactive",
    "dep:cairn-registry",
]

[dev-dependencies]
tempfile.workspace = true
