[package]
name = "cairn-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
