[package]
name = "cairn-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-domain = { workspace = true }
cairn-events = { workspace = true }
cairn-storage-local = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[lints]
workspace = true
