[package]
name = "cairn-storage-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cairn-domain = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
