[package]
name = "cairn-store"
description = "SQLite + content-hash blob store for Cairn (full-fidelity originals)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-core.workspace = true
cairn-embed.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
helix-db = "2"

[dev-dependencies]
tempfile.workspace = true
